[package]
name = "lekmenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stardust-xr-molecules = "0.5.1"
tokio = "1.21.1"
glam = "0.22.0"
anyhow = "1.0.65"
manifest-dir-macros = "0.1.16"
flexbuffers = "2.0.0"