[package]
name = "lekmenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stardust-xr-molecules = "0.6.0"
tokio = "1.21.1"
glam = "0.22.0"
anyhow = "1.0.65"
manifest-dir-macros = "0.1.16"
flexbuffers = "2.0.0"
walkdir = "2.3.2"
mint = "0.5.9"
xkbcommon = "0.5.0"
